Fix css error thumbnail spill out of container

--- a/source/components/NewsItem/NewsItem.css
+++ b/source/components/NewsItem/NewsItem.css
@@ -22,6 +22,7 @@
 
 .news-thumbnail {
   height: 100%;
+  width: 100%;
   object-fit: cover;
 }
 
